[SQONE-275] fix featured image header spacing regression

--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -20,6 +20,7 @@
 
 	@media (--viewport-medium) {
 		padding-top: var(--spacer-80);
+		padding-bottom: 0;
 	}
 }
 
